# Minimal-Qt-CMake-Template

./: .clangd  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
